Fixed side bar heading alignment

--- a/Final Website/css/style.css
+++ b/Final Website/css/style.css
@@ -289,6 +289,7 @@ footer {
 }
 .sideHeader {
     margin: 10px 0 10px;
+	text-align: center;
 }
 .sideList {
     list-style-type: none;
